fix: layout issue & update read-me info

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -18,7 +18,12 @@
 
 .button-group {
   float: right;
-  margin-top: 0.25rem;
+  display: flex;
+  align-items: center;
+}
+
+.user-info{
+  padding: 0 0.5rem;
 }
 
 .main-header {
